erDiagram
    CHECKIN {
        uuid id PK
        uuid user_id FK
        uuid practice_id FK
        enum state
        text description
        boolean skipped
        timestamp submitted_at
        timestamp reminder_sent_at
        int reminder_count
        jsonb metadata
    }
    
    CHECKIN_AGGREGATE {
        uuid id PK
        uuid practice_id FK
        int total_invited
        int total_responded
        int good_count
        int okay_count
        int low_count
        int skipped_count
        int with_text_count
        timestamp aggregated_at
        boolean master_notified
        boolean master_reviewed
    }
    
    USER ||--o{ CHECKIN : submits
    PRACTICE ||--o{ CHECKIN : has
    PRACTICE ||--|| CHECKIN_AGGREGATE : has
